+++++++++++
Python News
+++++++++++

What's New in Python 3.3.5 release candidate 1?
===============================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #19619: str.encode, bytes.decode and bytearray.decode now use an
  internal API to throw LookupError for known non-text encodings, rather
  than attempting the encoding or decoding operation and then throwing a
  TypeError for an unexpected output type. (The latter mechanism remains
  in place for third party non-text encodings)

- Issue #20588: Make Python-ast.c C89 compliant.

- Issue #20437: Fixed 21 potential bugs when deleting objects references.

- Issue #20538: UTF-7 incremental decoder produced inconsistant string when
  input was truncated in BASE64 section.

Library
-------

- Issue #20791: copy.copy() now doesn't make a copy when the input is
  a bytes object.  Initial patch by Peter Otten.

- Issue #20621: Fixes a zipimport bug introduced in 3.3.4 that could cause
  spurious crashes or SystemErrors when importing modules or packages from a
  zip file.  The change causing the problem was reverted.

- Issue #20635: Fixed grid_columnconfigure() and grid_rowconfigure() methods of
  Tkinter widgets to work in wantobjects=True mode.

- Issue #19612: On Windows, subprocess.Popen.communicate() now ignores
  OSError(22, 'Invalid argument') when writing input data into stdin, whereas
  the process already exited.

- Issue #6815: os.path.expandvars() now supports non-ASCII environment
  variables names and values.

- Issue #17671: Fixed a crash when use non-initialized io.BufferedRWPair.
  Based on patch by Stephen Tu.

- Issue #8478: Untokenizer.compat processes first token from iterator input.
  Patch based on lines from Georg Brandl, Eric Snow, and Gareth Rees.

- Issue #20594: Avoid name clash with the libc function posix_close.

- Issue #19856: shutil.move() failed to move a directory to other directory
  on Windows if source name ends with os.altsep.
